--- a/wiki/HowTo_AddNewContentType.wiki
+++ b/wiki/HowTo_AddNewContentType.wiki
@@ -10,31 +10,21 @@ To add a new content type you need to set up DB tables , classes and mappers. Al
 
 {{{
 
-bills = rdb.Table( 
-		"bills", 
-		metadata, 
-		rdb.Column( 
-			"bill_id", 
-			rdb.Integer, 
-			rdb.ForeignKey(’parliamentary_items.parliamentary_item_id’), 
-			primary_key=True 
-			), 
-		rdb.Column( 
-			"bill_type_id", 
-			rdb.Integer, 
-			rdb.ForeignKey(’bill_types.bill_type_id’), nullable = False 
-			), 
-		rdb.Column( 
-			"ministry_id", 
-			rdb.Integer, 
-			rdb.ForeignKey(’groups.group_id’) 
-			), 
-		rdb.Column( "identifier", rdb.Integer), 
-		rdb.Column( "summary", rdb.UnicodeText ), 
-		rdb.Column( "publication_date", rdb.Date ), 
-		) 
-bill_changes = make_changes_table( bills, metadata ) 
-bill_versions = make_versions_table( bills, metadata, parliamentary_items )
+bills = rdb.Table("bills", metadata,
+    rdb.Column("bill_id", rdb.Integer,
+        rdb.ForeignKey("parliamentary_items.parliamentary_item_id"),
+        primary_key=True
+    ),
+    rdb.Column("bill_type_id", rdb.Integer,
+        rdb.ForeignKey("bill_types.bill_type_id"),
+        nullable=False
+    ),
+    rdb.Column("ministry_id", rdb.Integer, rdb.ForeignKey("groups.group_id")),
+    rdb.Column("identifier", rdb.Integer),
+    rdb.Column("publication_date", rdb.Date),
+)
+bill_changes = make_changes_table(bills, metadata)
+bill_versions = make_versions_table(bills, metadata, parliamentary_items)
 
 }}}
 
@@ -44,31 +34,20 @@ This code generate the Bill table and the associated table for versioning and to
 
   {{{ 
 
-class Bill( ParliamentaryItem ): 
-		consignatory = one2many( 
-				"consignatory", 
-				"bungeni.models.domain.ConsignatoryContainer", 
-				"item_id"
-				) 
-		event = one2many( 
-				"event", 
-				"bungeni.models.domain.EventItemContainer", 
-				"item_id" 
-				) 
-		assignedgroups = one2many( 
-				"assignedgroups", 
-				"bungeni.models.domain.GroupGroupItemAssignmentContainer", 
-				"item_id"
-				) 
-		versions = one2many(
-				"versions", 
-				"bungeni.models.domain.BillVersionContainer", 
-				"content_id"
-				) 
-		sort_on = [’submission_date’] 
-		sort_dir = ’desc’ 
-		BillChange = ItemLog.makeLogFactory( "BillChange") 
-		BillVersion = ItemVersions.makeVersionFactory("BillVersion")
+class Bill(ParliamentaryItem):
+    cosignatory = one2many("cosignatory", 
+        "bungeni.models.domain.CosignatoryContainer", "item_id")
+    event = one2many("event", 
+        "bungeni.models.domain.EventItemContainer", "item_id")
+    assignedgroups = one2many("assignedgroups",
+        "bungeni.models.domain.GroupGroupItemAssignmentContainer", "item_id")
+    versions = one2many("versions",
+        "bungeni.models.domain.BillVersionContainer", "content_id")
+    sort_on = ParliamentaryItem.sort_on + ["submission_date"]
+
+BillChange = ItemLog.makeLogFactory("BillChange")
+BillVersion = ItemVersions.makeVersionFactory("BillVersion")
+
 }}}
 
 The last two are factory methods to generate the classes from Bill.
@@ -77,30 +56,37 @@ The last two are factory methods to generate the classes from Bill.
 
   {{{ 
 
-mapper( 
-	domain.Bill, 
-	schema.bills, 
-	inherits=domain.ParliamentaryItem, 
-	polymorphic_on=schema.parliamentary_items.c.type, 
-	polymorphic_identity=’bill’, 
-	properties = { 
-		’changes’:relation( 
-			domain.BillChange, 
-			backref=’origin’, 
-			cascade="all, 
-			delete-orphan", 
-			passive_deletes=False
-			) 
-		} 
-	) 
-mapper( domain.BillChange, schema.bill_changes ) 
-mapper( domain.BillVersion, 
-	schema.bill_versions, 
-	properties= { 
-		’change’:relation( domain.BillChange, uselist=False), 
-		’head’: relation( domain.Bill, uselist=False)
-		}
-
+mapper(domain.Bill, schema.bills,
+    inherits=domain.ParliamentaryItem,
+    polymorphic_on=schema.parliamentary_items.c.type,
+    polymorphic_identity="bill",
+    properties={
+        "changes": relation(domain.BillChange, 
+            backref="origin",
+            cascade="all, delete-orphan", 
+            passive_deletes=False
+        )
+    }
+)
+mapper(domain.BillChange, schema.bill_changes)
+mapper(domain.BillVersion, schema.bill_versions,
+    properties={
+        "change": relation(domain.BillChange, uselist=False),
+        "head": relation(domain.Bill, uselist=False),
+        "attached_files": relation(domain.AttachedFileVersion,
+            primaryjoin=rdb.and_(
+                schema.bill_versions.c.content_id ==
+                    schema.attached_file_versions.c.item_id,
+                schema.bill_versions.c.version_id ==
+                    schema.attached_file_versions.c.file_version_id
+            ),
+            foreign_keys=[
+                schema.attached_file_versions.c.item_id,
+                schema.attached_file_versions.c.file_version_id
+            ]
+        ), 
+    }
+)
 }}}
 
   * in bungeni.ui.descriptor the zope schema are mapped to the sqlalchemy. In the specific a class derived from ModelDescriptor class can declare for each field configuration parameters (name, label, ...), which widget to use and in some cases (eg. bill_type_id) the source of values to show:
@@ -109,98 +95,67 @@ mapper( domain.BillVersion,
 class BillDescriptor(ParliamentaryItemDescriptor):
     display_name = _(u"Bill")
     container_name = _(u"Bills")
-    fields = deepcopy(ParliamentaryItemDescriptor.fields )
-    for field in fields:
-        if field['name'] == 'body_text':
-            field['label'] = _(u"Statement of Purpose")
-            field['property'] = schema.Text(title=_(u"Statement of Purpose"),
-                required=False)
-                 
+    fields = deepcopy(ParliamentaryItemDescriptor.fields)
+    _bt = misc.get_keyed_item(fields, "body_text", key="name") # !+
+    _bt.label = _(u"Statement of Purpose")
+    _bt.property = schema.Text(
+        title=_(u"Statement of Purpose"), required=False)
+    
     fields.extend([
-        dict(name="bill_id", omit=True),
-        dict(name="bill_type_id", property = schema.Choice(
-                title =_(u"Bill Type"),
-                source=vocabulary.DatabaseSource(domain.BillType, 
-                    title_field='bill_type_name',
-                    token_field='bill_type_id',
-                    value_field='bill_type_id'),
+        Field(name="bill_id", modes=""),
+        Field(name="bill_type_id", 
+            property=schema.Choice(title=_(u"Bill Type"),
+                source=vocabulary.DatabaseSource(domain.BillType,
+                    title_field="bill_type_name",
+                    token_field="bill_type_id",
+                    value_field="bill_type_id"
                 ),
-             ),
-        dict(name="ministry_id", 
-              property = schema.Choice(title=_(u"Ministry"), 
-                    source=vocabulary.MinistrySource("ministry_id"),
-                    required=False,
-                    ), 
-             listing = False,),
-        dict(name="identifier", 
+            ),
+        ),
+        Field(name="ministry_id",
+            property=schema.Choice(title=_(u"Ministry"),
+                source=vocabulary.MinistrySource("ministry_id"), 
+                required=False
+            ),
+        ),
+        Field(name="identifier",
+            modes="edit|view",
             property=schema.Text(title=_(u"Identifier"), required=False),
-                add=False),
-        dict(name="publication_date", 
-                property=schema.Date(title=_(u"Publication Date"),required=False), 
-                listing=True, 
-                add=True, 
-                edit_widget=DateWidget, 
-                add_widget=DateWidget ,
-                listing_column=day_column("publication_date", 
-                    _(u"Publication Date")),),
-
-        ])
-
-    public_wfstates = [bill_wf_state[u"gazetted"].id , 
-                        bill_wf_state[u"first_reading"].id ,
-                        bill_wf_state[u"first_reading_postponed"].id ,
-                        bill_wf_state[u"first_committee"].id ,
-                        bill_wf_state[u"second_reading"].id , 
-                        bill_wf_state[u"second_reading_postponed"].id , 
-                        bill_wf_state[u"whole_house"].id ,
-                        bill_wf_state[u"second_committee"].id ,
-                        bill_wf_state[u"whole_house_postponed"].id ,
-                        bill_wf_state[u"third_reading"].id,
-                        bill_wf_state[u"third_reading_postponed"].id,
-                        bill_wf_state[u'withdrawn_public'].id,
-                        bill_wf_state[u"rejected"].id,
-                        bill_wf_state[u'approved'].id,
-                    ]
-
+        ),
+        Field(name="publication_date",
+            modes="view|edit|add|listing",
+            property=schema.Date(title=_(u"Publication Date"), required=False),
+            edit_widget=DateWidget,
+            add_widget=DateWidget ,
+            listing_column=day_column("publication_date", 
+                _(u"Publication Date")
+            ),
+        ),
+    ])
+    public_wfstates = get_states("bill", not_tagged=["private"])
 
 class BillVersionDescriptor(VersionDescriptor):
     display_name = _(u"Bill version")
     container_name = _(u"Versions")
     fields = deepcopy(VersionDescriptor.fields)
 
-class BillChangeDescriptor(ChangeDescriptor):
-    display_name = _(u"Bill change")
-    container_name = _(u"Changes")
-    fields = deepcopy(ChangeDescriptor.fields)
-    
-
 }}}
 
   * the bungeni.ui catalyst.zcml defines relation between bungeni.models.domain classes and bungeni.ui.descriptor classes: 
 {{{    
 
-  <db:catalyst
-     class="bungeni.models.domain.Bill"
-     descriptor=".descriptor.BillDescriptor"
-     interface_module="bungeni.models.interfaces"
-     ui_module="bungeni.ui.content"
-     echo="False"
-     />
-
-  <db:catalyst
-     class="bungeni.models.domain.BillVersion"
-     descriptor=".descriptor.BillVersionDescriptor"
-     interface_module="bungeni.models.interfaces"
-     ui_module="bungeni.ui.content" 
-     echo="False"
-     />
-  <db:catalyst
-     class="bungeni.models.domain.BillChange"
-     descriptor=".descriptor.BillChangeDescriptor"
-     interface_module="bungeni.models.interfaces"
-     ui_module="bungeni.ui.content" 
-     echo="False"
-     />
+    <db:catalyst class="bungeni.models.domain.Bill"
+        descriptor=".descriptor.BillDescriptor"
+        interface_module="bungeni.models.interfaces"
+        ui_module="bungeni.ui.content"
+        echo="False"
+    />
+    <db:catalyst class="bungeni.models.domain.BillVersion"
+        descriptor=".descriptor.BillVersionDescriptor"
+        interface_module="bungeni.models.interfaces"
+        ui_module="bungeni.ui.content" 
+        echo="False"
+    />
 
 }}}
 
@@ -209,12 +164,16 @@ On application startup ore.alchemist package (SQLAlchemy actually) does a lot of
 For example above in the class Bill, there is the declaration of bungeni.models.domain.BillVersionContainer:
 
 {{{ 
-versions = one2many("versions","bungeni.models.domain.BillVersionContainer","content_id")
+    versions = one2many("versions",
+        "bungeni.models.domain.BillVersionContainer", "content_id")
 }}}
 
 instead the container for Bill is defined in Parliament class (and in another class):
 {{{ 
-class Parliament( Group ):#...bills = one2many("bills","bungeni.models.domain.BillContainer","parliament_id")
+class Parliament(Group):
+    ...
+    bills = one2many("bills", 
+        "bungeni.models.domain.BillContainer", "parliament_id")
 }}}
 
 In general all those *Container are created by ore.alchemist.
@@ -225,45 +184,41 @@ With the definition of the ModelDescriptor derived class most of the setup is al
 
 The configuration is defined in bungeni.ui.form configure.zcml, for example:
 {{{
- <browser:page
-     name="view"
-     for="ore.alchemist.interfaces.IAlchemistContent"
-     class=".common.DisplayForm"
-     permission="zope.View"
-     layer="bungeni.ui.interfaces.IBungeniSkin"
-     />
-
-  <browser:page
-     name="add"
-     for="ore.alchemist.interfaces.IAlchemistContainer"
-     class=".common.AddForm"
-     permission="zope.ManageContent"
-     layer="bungeni.ui.interfaces.IBungeniSkin"
-     />
-
-  <browser:page
-     name="edit"
-     for="ore.alchemist.interfaces.IAlchemistContent"
-     class=".common.EditForm"
-     permission="zope.ManageContent"
-     layer="bungeni.ui.interfaces.IBungeniSkin"
-     />
-
-  <browser:page
-     name="delete"
-     for="ore.alchemist.interfaces.IAlchemistContent"
-     class=".common.DeleteForm"
-     permission="zope.ManageContent"
-     layer="bungeni.ui.interfaces.IBungeniSkin"
-     />
-
+    <browser:page name="view"
+        for="bungeni.alchemist.interfaces.IAlchemistContent"
+        class=".common.DisplayForm"
+        permission="zope.View"
+        layer="bungeni.ui.interfaces.IBungeniSkin"
+    />
+    <browser:page name="add"
+        for="bungeni.alchemist.interfaces.IAlchemistContainer"
+        class=".common.AddForm"
+        permission="zope.ManageContent"
+        layer="bungeni.ui.interfaces.IBungeniSkin"
+    />
+    <browser:page name="edit"
+        for="bungeni.alchemist.interfaces.IAlchemistContent"
+        class=".common.EditForm"
+        permission="zope.ManageContent"
+        layer="bungeni.ui.interfaces.IBungeniSkin"
+    />
+    <browser:page name="delete"
+        for="bungeni.alchemist.interfaces.IAlchemistContent"
+        class=".common.DeleteForm"
+        permission="zope.ManageContent"
+        layer="bungeni.ui.interfaces.IBungeniSkin"
+    />
 }}}
 
 These directives defines the binding between Bill and the type of available forms: DisplayForm, AddForm, EditForm, DeleteForm.
 
 An example of configuration, binding a model with a generic ’view’, is in bungeni.ui views.zcml:
 {{{
-<browser:pagefor="bungeni.models.interfaces.IBungeniContent"name="workflow"class=".workflow.WorkflowView"permission="zope.Public"/>
+    <browser:page name="workflow"
+        for="bungeni.models.interfaces.IBungeniContent"
+        class=".workflow.WorkflowView"
+        permission="zope.Public"
+    />
 }}}
 
 This configuration is generic and valid for all contents implementing the IBungeniContent interface.
@@ -271,6 +226,8 @@ This configuration is generic and valid for all contents implementing the IBunge
 The order of the field is basically the order in which they are defined in the ModelDescriptor class. The most straight forward way to change the order is to subclass the form and select the fields in the order you like to have but as it is a zope.form field the field has an order which you may set too. If the ordering should be done in a configuration file that is probably the way to go
 
 === How to override a view ===
+
+!+_WARNING_(mr, oct-2010) content below here is outdated.
 
 To change a default view the configuration must re-define the association between the model and the brower page. In Zope the usual way is to create an overrides.zcml file, for example:
 {{{
