Updates to member workspace functionality - member spaces are now created as Cynin ContentSpaces.

--- a/plone.buildout/trunk/src/Products.workspaces/docs/HISTORY.txt
+++ b/plone.buildout/trunk/src/Products.workspaces/docs/HISTORY.txt
@@ -4,5 +4,5 @@ Changelog
 1.0 - Unreleased
 ----------------
 
-* Initial release
+* Initial release -Functionality for member and group workspaces.
 
