Several corrections to Form Localization wiki page; added same wiki page to main TOC.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -23,6 +23,7 @@
      * [HowTo_ViewletManagers Viewlet Managers in Bungeni]
      * [HowTo_PermissionsRolesAndDefinitions Permissions Roles and Definitions]
      * [HowTo_AddNewOfficeToBungeni How to add a new office to Bungeni]
+     * [DevFormLocalization Localization of Bungeni Forms]
      * [HowTo_AddValidationToForms How to do add validation to Forms]
      * [AlchemistsUIElements How to tweak the layout of Bungeni Forms]
      * [CustomSortForContainers How to do change the sort order for Bungeni folderish containers]
