--- a/wiki/DevFormLocalization.wiki
+++ b/wiki/DevFormLocalization.wiki
@@ -13,12 +13,13 @@ We accept the following assumptions to set the scope and limits of what to allow
 
 *`[A0]`* All statements here are _Field_-oriented i.e. everything stated is within the context of a specific Field (within a UI Descriptor).
 
-*`[A1]`* Every localizable mode has a default localization i.e. for each localizable mode there is a bungeni defined ddefault set of roles for whom the field is to be shown. OTOH, every non-localizable mode may NOT be associated to a set of roles for visibility (the related security declarations in domain.zcml must prevail). 
-- Besides the obvious scenario (of declaring a mode localizable and specifying the roles the Field is to be shown for) this also enables the possibility to declare a mode to be localizable while by default keeping it not visible to any role (an example of this case is the ParliamentaryItemDescriptor.full_name field, that is declared but made non-visible for all roles, leaving it up to a parliament to enable it if so desired).
+*`[A1]`* Every localizable mode has a default localization i.e. for each localizable mode there is a bungeni defined default set of roles for whom the field is to be shown. OTOH, every non-localizable mode may NOT be associated to a set of roles for visibility (the related security declarations in domain.zcml must prevail). 
+
+ * Besides the obvious scenario (of declaring a mode localizable and specifying the roles the Field is to be shown for) this also enables the possibility to declare a mode to be localizable while by default keeping it not visible to any role (an example of this case is the `ParliamentaryItemDescriptor.full_name` field, that is declared but made non-visible for all roles, leaving it up to a parliament to enable it if so desired).
 
 *`[A2]`* Some fields are *required* for proper functioning of Bungeni (e.g. by the data schema, or are assumed to be there by a workflow definition) and thus may not be disabled/hidden i.e. may not be localized--at least in certain key views, such as a form in `add` and `edit` modes, to ensure that the schema/business constraints are always respected. As a consequence, a mode may be declared not localizable in Bungeni and any attempt to localize it for a specific deployment must result in an immediate error.
 
-*`[A3]`* The display order of fields in all forms is *always* localizable; furthermore the display order of enabled fields will always be the same for all modes (and all roles).
+*`[A3]`* The display order of fields in all forms is *always* localizable; furthermore the relative order of displayed fields will always be the same for all modes (and for all roles).
 
 *`[A4]`* If a mode is declared to be localizable, then it is localizable for all roles.
 
@@ -30,18 +31,19 @@ To support localization, some changes to how forms are processed internally with
 
 We retain the Field-oriented descriptor mechanism that is currently in place, and evolve it to cover the additional needs, that thus consist of:
 
-*`[B1]`* To be able to declare which modes a field is allowed to be localized in. Note: this feature is in addition to and independent of the already implemented ability of declaring which modes a field is to be displayed in.
+*`[B1]`* To be able to declare which modes a field is allowed to be localized in.  
+<br/>Note: this feature is in addition to and independent of the already implemented ability of declaring which modes a field is to be displayed in.
 
 *`[B2]`* For each localizable mode, to be able to declare which roles the field is to be displayed for.
 
-The processing of these declarations necessitates corresponding changes to bungeni/alchemist code are needed.
+To process these declarations corresponding changes to bungeni/alchemist code are required.
 
 
 === Localization by a Parliament's Site Admin ===
 
 To support localization of a deployment's form views the following is required:
 
-*`[C1]`* To be able to state, per UI descriptor, the display order (and inclusion) of all fields (in their entirety and independently of all modes/roles for which they may be enabled).
+*`[C1]`* To be able to state, per localizable UI descriptor, the display order (and inclusion) of all fields (in their entirety and independently of all modes/roles for which they may be enabled).
 
  * It is an error to omit any field that is not localizable.
  * It is a warning to omit any field that is localizable (to categorically disable a field it should still be included but declared to be hidden from all roles).
@@ -49,8 +51,10 @@ To support localization of a deployment's form views the following is required:
 
 *`[C2]`* To be able to adjust, per localizable mode, the roles for which the field is to be displayed for.
 
- * It is an error to attempt to adjust the roles for a non-localizable mode.
- * For a localizable mode, if the bungeni-specified list of roles is to be adjusted then the list of roles must be entirely restated i.e. the entire desired list of a mode's roles must be explicitly specified, either via explicit inclusion (show) or as the complement of explicit exclusion (hide).
+ * It is an error to attempt to localize a non-localizable *decriptor*.
+ * Contrarily, it is perfectly OK for a localization to to omit entirely a localizable *descriptor* (implying that the omitted descriptor is simply not being localized in this deployment).
+ * It is an error to attempt to adjust a *field*'s the roles for a non-localizable mode.
+ * For a *field* in a localizable mode, if the bungeni-specified list of roles is to be adjusted then the list of roles must be entirely restated i.e. the entire desired list of a mode's roles must be explicitly specified, either via explicit inclusion (show) or as the complement of explicit exclusion (hide).
 
 
 === Other considerations ===
@@ -59,10 +63,10 @@ To support localization of a deployment's form views the following is required:
 
 *`[X2]`* The source format selected for the configuration file should support easy commenting out of entire declarations or parts thereof.
 
-*`[X3]`* How a localization is picked by the system should be convenient -- such that switching from one localization to another involves no more than simply modifying a file-system path parameter in the application's deploy.ini file and restarting the application.
+*`[X3]`* How a localization is picked by the system should be convenient--such that switching from one localization to another involves no more than simply modifying a file-system path parameter in the application's deploy.ini file and restarting the application.
 
 
-== Design == 
+== Design ==
 
 === Descriptor API ===
 
@@ -70,16 +74,14 @@ To support localization of a deployment's form views the following is required:
 
 As not every descriptor corresponds to a actual set of form views, content-type descriptors must explicitly be declared as localizable. 
 
-Example is the base descriptors that are used for programmatic convenience to define other real descriptors e.g. ParliamentaryItemDescriptor does not directly correspond to a set of views.
+Example is the base descriptors that are used for programmatic convenience to define other real descriptors e.g. `ParliamentaryItemDescriptor` does not directly correspond to a set of views.
 
-To address this, we add a `localizable:bool = False` class attribute to ModelDescriptor, like so:
+To address this, we add a `localizable:bool = False` class attribute to `ModelDescriptor`, like so:
 
 {{{
     class ModelDescriptor(object):
         localizable = False
 }}}
-
-It is an error to try and localize a non-localizable decriptor but, contrarily, it is perfectly OK to omit a localizable descriptor in a localization (implying that the omitted descriptor is simply not being localized in this deployment).
 
 Note that localization of individual Fields is completely independent of localizability of a descriptor i.e. a field may be declared localizable even when the containing descriptor is declared not localizable. 
 
@@ -118,12 +120,13 @@ i.e. a list of either `show(modes, roles)` or `hide(modes, roles)` declarations,
 
  * the field is localizable for a given mode if (and only if) that mode appears in one (and only one) of these show/hide declarations--this also implies that a mode may appear only once in a field's show/hide directives.
 
- * not specifying either of the `modes` or `roles` parameter (or specifying None as their value) is equivalent to respectively specifying all modes or roles. A corollary of this is that an additional `show()` declaration (with the modes parameter omitted) MUST generate an error (as this means at least one mode is included more than once in the show/hide declarations). 
+ * not specifying either of the `modes` or `roles` parameter (or specifying None as their value) is equivalent to respectively specifying all modes or roles. A corollary of this is that an additional `show()` declaration (with the modes parameter omitted) *must* generate an error (as this means at least one mode is included more than once in the show/hide declarations). 
 
  * directives `show` or `hide` are _roles-complement_ of each other i.e. the following are two equivalent statements of the same rule (for each case, convenience and improved clarity would inform which to prefer):
 {{{
     hide(roles="bungeni.Anybody")
-    show(roles="bungeni.Admin bungeni.Clerk bungeni.Speaker bungeni.MP bungeni.Minister bungeni.Anybody")
+    show(roles="""bungeni.Admin bungeni.Clerk bungeni.Speaker bungeni.MP 
+        bungeni.Minister bungeni.Anybody""")
 }}}
 
  * the implementation of `show` and `hide` consists of a couple of factory utilities  supporting the bungeni descriptor API, each having the 2 keyword parameters, `modes` and `roles`.
@@ -167,10 +170,10 @@ Example:
 }}}
 The above code declares the following:
 
- * QuestionDescriptor as localizable
- * The `moved by` question field to be localizable in the `view` and `listing` modes (and only those modes), while the `ministry_submit_date` question field to be localizable in the `view` and `edit` modes (and only those modes)
+ * `QuestionDescriptor` as localizable.
+ * The `moved by` question field to be localizable in the `view` and `listing` modes (and only those modes), while the `ministry_submit_date` question field to be localizable in the `view` and `edit` modes (and only those modes).
  * For `moved_by`: for the 2 modes, it sets the default lists of roles that this field is to be shown for to be all roles except for `bungeni.Anybody`.
- * For `ministry_submit_date`: it states that in `view` mode the Field is to be shown for all roles.
+ * For `ministry_submit_date`: it states that in `view` mode the field is to be shown for all roles.
 
 
 Note the following is an equivalent way to express the `moved_by` field `localizable` init parameter as the one in the example above:
@@ -226,10 +229,10 @@ The declaration structure follows the same lines as descriptor's Field.localizab
 The above localization code is:
 
  * setting the field order.
- * stating that the `moved_by` field [+!owner_id -- the human field name should be used not the underlying attribute name] is being localized to be display for Clerk/Speaker in view mode, and to be shown to all except for Anybody in listing mode. 
+ * stating that the `moved_by` field (+!`owner_id`--the human field name should be used not the underlying attribute name) is being localized to be display for Clerk/Speaker in view mode, and to be shown to all except for Anybody in listing mode. 
  * localizing the `ministry_submit_date` Field in in `view` mode to not be shown to any role.
 
-Note we specify ALL the fields (those defined in QuestionDescriptor as well as those copied off from ParliamentaryItemDescriptor)--to change the order we simply... change the order.
+Note we specify *all* the fields (those defined in `QuestionDescriptor` as well as those copied off from `ParliamentaryItemDescriptor`)--to change the order we simply... change the order.
 
 The show and hide directives follow exactly the same logic as in bungeni descriptor.
 
