--- a/wiki/HowTo_ConfigureFabricIni.wiki
+++ b/wiki/HowTo_ConfigureFabricIni.wiki
@@ -1,5 +1,4 @@
 #summary Understanding the Setup Ini files
-#labels bungeni-wiki
 #sidebar TableOfContents
 
 <wiki:toc max_depth="4" />
@@ -86,7 +85,7 @@ If you have a package index for bungeni in your network, you can set this parame
 
 === app_host === 
 
-Specifies the IP address or domain name of the host on which you are deploying.
+Specifies the IP address or domain name of the deliverance portal host on which you are deploying.
 
 {{{
 [global]
@@ -95,6 +94,8 @@ app_host = 92.243.15.192
 }}}
 
 If you are deploying only onto the local computer and not accessing the installation from another computer, you can set this to `localhost`.
+If you are deploying it in a LAN for test purposes you can set it to the IP address of the computer on which you have installed it.
+If you are deploying bungeni on the internet hosted on a domain -- you can set this to `localhost` to proxy it behind a domain name. See [#portal_deployment_configuration Portal Deployment Configuration]
 
 === supervisor_host , supervisor_port ===
 
@@ -117,6 +118,7 @@ supervisor_port = 8888
 }}}
 
 setting the above makes the supervisor interface accessible on http://localhost:8888.
+Note that setting the supervisor host to `0.0.0.0` makes it listen on all network interfaces. This may not always be desirable, in such instances set it to a specific IP.
 
 
 === distro_override === 
@@ -186,8 +188,54 @@ http_port=8081
 
 `local_index` is the address of the local package index. This is used only when `local_cache` is set to `True` in `[global]`.
 `repo` is the address of the bungeni subversion repository minus the protocol part of the URL. Fabric sets it appropriately depending upon whether you use `development_mode` or not.
-`http_port` is the port on which the bungeni http service runs.
+`http_port` is the port on which the http service for the application listens on.
 
+=== portal deployment configuration ===
+
+The *portal* section provides certain extra deployment parameters, which are explained below.
+
+The deliverance portal is an application proxy -- and can be proxied behind a virtualhost / domain. The following parameters allow us to do this easily
+
+The `theme` parameter specifies the theme layout file to be used by the deliverance portal. The path is always relative to `bungeni_installation/src/bungeni.main/bungeni/portal/static/themes`.
+
+{{{
+[portal]
+.......
+##themes are relative to the portal address /static/themes/ uri
+theme = layout.html
+}}}
+
+The `http_port` parameter specifies the port on which the deliverance proxy runs :
+{{{
+[portal]
+.......
+http_port=8080
+}}}
+
+The `static_port` parameter specifies the port on which static content is served :
+{{{
+static_port=8083
+}}}
+
+The `web_server_host` and `web_server_port` parameters have been explained below in the inline comment :
+{{{
+## Next two parameters are for deployment purposes under
+## web server (e.g. Apache, Nginx ...). 
+## Running in a development environment --- 
+## if in a development environment and not deploying behind 
+## a web server use app_host value for web_server_host ; and
+## use http_port value for web_server_port
+## 
+## Runing in a deployment environment ---
+## if you are deploying it behind a web server and a domain 
+## set web_server_host to the domain e.g. kenya.bungeni.org
+## set web_server_port to 80 -- which means you can now 
+## browse bungeni on http://kenya.bungeni.org/
+web_server_host = test.bungeni.org
+web_server_port = 80
+}}}
+
+For example nginx and apache configurations see [HowTo_ProxyBungeniBehindWebServer How to proxy Bungeni behind a web server]
 
 == The postgresql, xapian, xapian-bindings and exist sections == 
 
