--- a/wiki/Install_Plone_Fabric.wiki
+++ b/wiki/Install_Plone_Fabric.wiki
@@ -48,7 +48,7 @@ Click on site-setup -> Add on products.
  
  * Bungeni CMS Policy and click install.
  * Bungeni CMS theme, and click install.
- * do the same for BungeniHelpCenter, plonegalleryview, Plone second level navbar,TinyMCE, Collage, collective.collage.easyslider, collective.collage.portlets,RSS Dynamic document and LinguaPlone.
+ * do the same for BungeniHelpCenter, plonegalleryview, Plone second level navbar,TinyMCE, Collage, collective.collage.easyslider, collective.collage.portlets,RSS Dynamic document, RSS Listing and LinguaPlone.
 
 Click on site-setup -> Language.
 
